couple of updates

--- a/public/index.html
+++ b/public/index.html
@@ -658,25 +658,25 @@
              <div class="slds-col slds-size_1-of-5">
                 <h2><b>Instore Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Communication Cell Code Instore</span>
+                    <span class="slds-form-element__label">Instore Communication Cell Code</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="communication_cell_code_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Print at Till Instore</span>
+                    <span class="slds-form-element__label">Instore Print at Till</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="print_at_till_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instant Win Instore</span>
+                    <span class="slds-form-element__label">Instore Instant Win</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="instant_win_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Medium Instore</span>
+                    <span class="slds-form-element__label">Instore Medium</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="medium_instore_summary"></div>
                     </div>
@@ -688,7 +688,7 @@
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Promotion ID Group Instore</span>
+                    <span class="slds-form-element__label">Instore Promotion ID Group</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="promotion_group_id_instore_summary"></div>
                     </div>
