And that's it for markup for now

--- a/public/index.html
+++ b/public/index.html
@@ -542,7 +542,7 @@
 
             <div class="slds-col slds-size_1-of-5">
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Promotion Type</span>
+                    <span class="slds-form-element__label"><b>Promotion Type</b></span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="promotion_type_summary"></div>
                     </div>
@@ -612,7 +612,7 @@
             <div class="slds-col slds-size_1-of-5">
                 <h2><b>Online Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">MC Unique Promotion ID</span>
+                    <span class="slds-form-element__label">MC Unique Promotion ID Online</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="mc_unique_promotion_id_online_summary"></div>
                     </div>
@@ -692,25 +692,25 @@
              <div class="slds-col slds-size_1-of-5">
                 <h2><b>Instore Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instore Communication Cell Code</span>
+                    <span class="slds-form-element__label">MC Unique Promotion ID Instore</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="communication_cell_code_instore_summary"></div>
+                        <div class="slds-form-element__static" id="mc_unique_promotion_id_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instore Print at Till</span>
+                    <span class="slds-form-element__label">Print at Till Instore</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="print_at_till_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instore Instant Win</span>
+                    <span class="slds-form-element__label">Instant Win Instore</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="instant_win_instore_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instore Medium</span>
+                    <span class="slds-form-element__label">Medium Instore</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="medium_instore_summary"></div>
                     </div>
@@ -722,7 +722,7 @@
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Instore Promotion ID Group</span>
+                    <span class="slds-form-element__label">Promotion ID Group Instore</span>
                     <div class="slds-form-element__control">
                         <div class="slds-form-element__static" id="promotion_group_id_instore_summary"></div>
                     </div>
