Show test API button

--- a/public/index.html
+++ b/public/index.html
@@ -572,6 +572,7 @@
                         <p>Your unique Instore Promotion Association Key is: <b><span id="instoreKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
+                <button id="test-api-insert">Test API Insert</button>
             </div>
 
             <div class="slds-col slds-size_1-of-5">
@@ -606,7 +607,6 @@
                         <div class="slds-form-element__static" id="campaign_id_online_summary"></div>
                     </div>
                 </div>
-                
             </div>
 
             <div class="slds-col slds-size_1-of-5">
