Small change to cause deploy

--- a/public/index.html
+++ b/public/index.html
@@ -37,14 +37,14 @@
                             <input type="radio" class="promotion_type" id="radio-1" value="online" name="promotionType" />
                             <label class="slds-radio__label" for="radio-1">
                                 <span class="slds-radio_faux"></span>
-                                <span class="slds-form-element__label">Online Code only</span>
+                                <span class="slds-form-element__label">Online Code Only</span>
                             </label>
                         </span>
                         <span class="slds-radio">
                             <input type="radio" class="promotion_type" id="radio-2" value="instore" name="promotionType" />
                             <label class="slds-radio__label" for="radio-2">
                                 <span class="slds-radio_faux"></span>
-                                <span class="slds-form-element__label">In-store Code only</span>
+                                <span class="slds-form-element__label">In-store Code Only</span>
                             </label>
                         </span>
                         <span class="slds-radio">
