--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,8 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="communication_cell_code_online" placeholder="Communication Cell Code" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__communication_cell_code_online">This field is required</div>
+
                 </div>
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Cell Code</label>
@@ -97,6 +99,7 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="cell_code_online" placeholder="Cell Code" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__cell_code_online">This field is required</div>
                 </div>
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Cell Name</label>
@@ -114,6 +117,7 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="cell_name_online" placeholder="Cell Name" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__cell_name_online">This field is required</div>
                 </div>
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Campaign Name</label>
@@ -131,6 +135,7 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="campaign_name_online" placeholder="Campaign Name" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__campaign_name_online">This field is required</div>
                 </div>
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Campaign ID</label>
@@ -148,6 +153,7 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="campaign_id_online" placeholder="Campaign ID" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__campaign_id_online">This field is required</div>
                 </div>
                 <div class="slds-form-element">
                     <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Campaign Code</label>
@@ -165,6 +171,7 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="campaign_code_online" placeholder="Campaign Code" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__campaign_code_online">This field is required</div>
                 </div>
             </div>
 
@@ -188,27 +195,42 @@
                     <div class="slds-form-element__control">
                         <input type="text" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
+                    <div class="slds-form-element__help" id="form-error__campaign_code_online">This field must be unique.</div>
                 </div>
 
                 <div class="slds-form-element">
-                    <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Offer Type</label>
+                    <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Online Code</label>
                     <div class="slds-form-element__icon">
-                        <button class="slds-button slds-button_icon" id="offer_type_online__help_button" aria-describedby="help">
+                        <button class="slds-button slds-button_icon" id="global_code_online__help_button" aria-describedby="help">
                             <svg class="slds-button__icon" aria-hidden="true">
                                 <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="offer_type_online__help" style="position:absolute;top:-34px;left:-16px;width:168px">
-                            <div class="slds-popover__body">Select an Offer Type so we can locate a voucher</div>
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="global_code_online__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                            <div class="slds-popover__body">If left empty, the system will assume you wish to use a voucher pot.</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <div class="slds-select_container">
-                            <select class="slds-select" id="offer_type_online">
-                                <option selected>Please select and Offer Type</option>
-                            </select>
+                        <input type="text" id="global_code_online" placeholder="Global Online Code" class="slds-input" />
+                    </div>
+                </div>
+
+                <div class="slds-form-element">
+                    <label class="slds-form-element__label" for="tooltip-showing-form-element-help-01">Online Voucher Pot</label>
+                    <div class="slds-form-element__icon">
+                        <button class="slds-button slds-button_icon" id="voucher_pot_online__help_button" aria-describedby="help">
+                            <svg class="slds-button__icon" aria-hidden="true">
+                                <use xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#info"></use>
+                            </svg>
+                            <span class="slds-assistive-text">Help</span>
+                        </button>
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="voucher_pot_online__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                            <div class="slds-popover__body">If you're not using a global online code, please enter the Data Extension name for the voucher pot you will be using.</div>
                         </div>
+                    </div>
+                    <div class="slds-form-element__control">
+                        <input type="text" id="voucher_pot_online" placeholder="Voucher Pot Name" class="slds-input" />
                     </div>
                 </div>
 
@@ -275,7 +297,7 @@
                         <div class="slds-select_container">
                             <select class="slds-select" id="medium_online">
                             <option value="Email" selected>Email - Marketing Cloud</option>
-                            <!--<option value="EPOS">EPOS</option>-->
+                            <option value="EPOS">EPOS</option>
                             <option value="Whitemail">Whitemail - Direct Mail</option>
                             <option value="Mobilize">Mobilize - Matalan App</option>
                             </select>
@@ -657,9 +679,15 @@
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label">Offer Type</span>
+                    <span class="slds-form-element__label">Global Online Code</span>
                     <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="offer_type_summary"></div>
+                        <div class="slds-form-element__static" id="global_code_online_summary"></div>
+                    </div>
+                </div>
+                <div class="slds-form-element slds-form-element_readonly">
+                    <span class="slds-form-element__label">Voucher Pot</span>
+                    <div class="slds-form-element__control">
+                        <div class="slds-form-element__static" id="voucher_pot_online_summary"></div>
                     </div>
                 </div>
                 <div class="slds-form-element slds-form-element_readonly">
