Couple of typos

--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_id_online" placeholder="Campaign ID" class="slds-input" />
+                        <input type="number" id="campaign_id_online" placeholder="Campaign ID" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_id_online">This field is required</div>
                 </div>
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
+                        <input type="number" id="mc_unique_promotion_id_online" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
                     <div class="slds-form-element__help" id="form-error__campaign_code_online">This field must be unique.</div>
                 </div>
@@ -432,7 +432,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_id_instore" placeholder="Campaign ID" class="slds-input" />
+                        <input type="number" id="campaign_id_instore" placeholder="Campaign ID" class="slds-input" />
                     </div>
                 </div>
                 <div class="slds-form-element">
@@ -444,12 +444,12 @@
                             </svg>
                             <span class="slds-assistive-text">Help</span>
                         </button>
-                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="campaign_code_online__help" style="position:absolute;top:-34px;left:-16px;width:168px">
+                        <div class="slds-popover slds-popover_tooltip slds-nubbin_bottom-left" role="tooltip" id="campaign_code_instore__help" style="position:absolute;top:-34px;left:-16px;width:168px">
                             <div class="slds-popover__body">Enter a Campaign Code</div>
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="campaign_code_online" placeholder="Campaign Code Instore" class="slds-input" />
+                        <input type="text" id="campaign_code_instore" placeholder="Campaign Code Instore" class="slds-input" />
                     </div>
                 </div>
             </div>
@@ -472,7 +472,7 @@
                         </div>
                     </div>
                     <div class="slds-form-element__control">
-                        <input type="text" id="mc_unique_promotion_id_instore" placeholder="MC Unique Promotion ID" class="slds-input" />
+                        <input type="number" id="mc_unique_promotion_id_instore" placeholder="MC Unique Promotion ID" class="slds-input" />
                     </div>
                 </div>
 
