--- a/public/index.html
+++ b/public/index.html
@@ -612,7 +612,7 @@
 
         <div class="slds-grid slds-gutters">
 
-            <div class="slds-col slds-size_1-of-5">
+            <div class="slds-col slds-size_1-of-2">
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label"><b>Promotion Type</b></span>
                     <div class="slds-form-element__control">
@@ -632,7 +632,9 @@
                         <p>Your unique Online Promotion Association Key is: <b><span id="onlineKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
-                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" id="storeKey" role="status">
+            </div>
+            <div class="slds-col slds-size_1-of-2">
+                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" id="instoreKey" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
                             <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
@@ -648,7 +650,7 @@
                 <button id="test-api-insert">Test API Insert</button>
             </div>
 
-            <div class="slds-col slds-size_1-of-5">
+            <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Online Communication Cell Code</span>
@@ -688,7 +690,7 @@
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-5">
+            <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">MC Unique Promotion ID Online</span>
@@ -740,7 +742,7 @@
                 </div>
             </div>
 
-            <div class="slds-col slds-size_1-of-5">
+            <div class="slds-col slds-size_1-of-4">
                 <h2><b>Instore Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">Instore Communication Cell Code</span>
@@ -780,7 +782,7 @@
                 </div>
             </div>
 
-             <div class="slds-col slds-size_1-of-5">
+             <div class="slds-col slds-size_1-of-4">
                 <h2><b>Instore Voucher Setup</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
                     <span class="slds-form-element__label">MC Unique Promotion ID Instore</span>
