--- a/public/index.html
+++ b/public/index.html
@@ -629,7 +629,7 @@
                         </span>
                     </div>
                     <div class="slds-media__body">
-                        <p>Your unique Online Promotion Association Key is: <b><span id="onlineKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
+                        <p>Your unique <b>Online Promotion Association Key</b> is: <b><span class="summary-key" id="onlineKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
             </div>
@@ -644,7 +644,7 @@
                         </span>
                     </div>
                     <div class="slds-media__body">
-                        <p>Your unique Instore Promotion Association Key is: <b><span id="instoreKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
+                        <p>Your unique <b>Instore Promotion Association Key is:</b> <b><span class="summary-key" id="instoreKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
                 <button id="test-api-insert">Test API Insert</button>
