--- a/public/index.html
+++ b/public/index.html
@@ -647,9 +647,9 @@
                         <p>Your unique <b>Instore Promotion Association Key is:</b> <b><span class="summary-key" id="instoreKeySummary"></span></b>. Copy this key and use it in the Update Contact widget.</p>
                     </div>
                 </div>
-                <button id="test-api-insert">Test API Insert</button>
             </div>
-
+        </div>
+        <div class="slds-grid slds-gutters">
             <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
