--- a/public/index.html
+++ b/public/index.html
@@ -613,12 +613,6 @@
         <div class="slds-grid slds-gutters">
 
             <div class="slds-col slds-size_1-of-2">
-                <div class="slds-form-element slds-form-element_readonly">
-                    <span class="slds-form-element__label"><b>Promotion Type</b></span>
-                    <div class="slds-form-element__control">
-                        <div class="slds-form-element__static" id="promotion_type_summary"></div>
-                    </div>
-                </div>
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status" id="onlineKey">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
@@ -649,7 +643,7 @@
                 </div>
             </div>
         </div>
-        <div class="slds-grid slds-gutters">
+        <div class="slds-grid slds-gutters" id="summary-margin-top">
             <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
