--- a/public/index.html
+++ b/public/index.html
@@ -610,10 +610,10 @@
 
     <div id="step3" class="step">
 
-        <div class="slds-grid slds-gutters">
+        <div class="slds-grid">
 
-            <div class="slds-col slds-size_1-of-2">
-                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status" id="onlineKey">
+            <div id="onlineKey" class="slds-col slds-size_1-of-2">
+                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
                             <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
@@ -627,8 +627,8 @@
                     </div>
                 </div>
             </div>
-            <div class="slds-col slds-size_1-of-2">
-                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" id="instoreKey" role="status">
+            <div id="instoreKey" class="slds-col slds-size_1-of-2">
+                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
                             <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
@@ -643,7 +643,7 @@
                 </div>
             </div>
         </div>
-        <div class="slds-grid slds-gutters" id="summary-margin-top">
+        <div class="slds-grid" id="summary-margin-top">
             <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
