--- a/public/index.html
+++ b/public/index.html
@@ -628,7 +628,7 @@
                 </div>
             </div>
             <div id="instoreKey" class="slds-col slds-size_1-of-2">
-                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light margin-top-grid" role="status">
+                <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
                     <div class="slds-media__figure">
                         <span class="slds-icon_container slds-icon-utility-info" title="information">
                             <svg class="slds-icon slds-icon_small slds-icon-text-default" aria-hidden="true">
