--- a/public/index.html
+++ b/public/index.html
@@ -610,7 +610,7 @@
 
     <div id="step3" class="step">
 
-        <div class="slds-grid">
+        <div class="slds-grid slds-gutters">
 
             <div id="onlineKey" class="slds-col slds-size_1-of-2">
                 <div class="slds-scoped-notification slds-media slds-media_center slds-scoped-notification_light" role="status">
@@ -643,7 +643,7 @@
                 </div>
             </div>
         </div>
-        <div class="slds-grid" id="summary-margin-top">
+        <div class="slds-grid slds-gutters" id="summary-margin-top">
             <div class="slds-col slds-size_1-of-4">
                 <h2><b>Online Comms History</b></h2>
                 <div class="slds-form-element slds-form-element_readonly">
